--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
           <i class="fas fa-4x fa-heart text-white mb-4"></i>
           <h2 class="text-white mt-0">Helhjärtat eller inte alls.</h2>
           <hr class="divider light my-4">
-          <p class="text-white-75 mb-4">Min filosofi är att sträva efter att göra mitt bästa i allt jag gör. Göra det som driver mig framåt. Göra det som gör mig glad. Göra det som utmanar mig att bli en bättre jag.</p>
-          <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Framtid</a>
+          <p class="text-white-75 mb-4">Min filosofi är att sträva efter att göra mitt bästa i allt jag gör. Göra det som driver mig framåt. Göra det som gör mig glad. Göra det som utmanar mig att bli ett bättre jag.</p>
+          <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Utveckling</a>
         </div>
       </div>
     </div>
@@ -87,7 +87,7 @@
   <!-- Services Section -->
   <section class="page-section" id="services">
     <div class="container">
-      <h2 class="text-center mt-0">Interessen</h2>
+      <h2 class="text-center mt-0">Utveckling</h2>
       <hr class="divider my-4">
       <div class="row">
         <div class="col-lg-3 col-md-6 text-center">
@@ -168,7 +168,7 @@
                 UX/UI
               </div>
               <div class="project-name">
-                TidsReg Wireframe <br> App mockup för en tidsregistrerings app
+                TidsReg Wireframe <br> App mockup för en tidsregistreringsapp
               </div>
             </div>
           </a>
@@ -198,7 +198,7 @@
                 Hybridutveckling JavaScript del 1
               </div>
               <div class="project-name">
-                Cats and Zombies - bild baserad spel
+                Cats and Zombies - bild baserad JavaScript spel
               </div>
             </div>
           </a>
@@ -215,7 +215,7 @@
                 UX/UI
               </div>
               <div class="project-name">
-                Ljuvalivet - 50++ Dejtingapp mockup
+                Ljuvalivet - 50++ Dejting App mockup
               </div>
             </div>
           </a>
@@ -242,7 +242,7 @@
         <div class="col-lg-8 text-center">
           <h2 class="mt-0">Get In Touch!</h2>
           <hr class="divider my-4">
-          <p class="text-muted mb-5">Du kan nå mig via följande platform.</p>
+          <p class="text-muted mb-5">Du kan nå mig via följande platformar.</p>
         </div>
       </div>
       <div class="row">
