--- a/index.html
+++ b/index.html
@@ -208,20 +208,20 @@
           <a href="img/portfolio/fullsize/catsandzombies/5.jpg"></a>
         </div>
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/ljuvalivet/1.jpg">
-            <img class="img-fluid" src="img/portfolio/thumbnails/ljuvalivet/1.jpg" alt="">
+          <a class="portfolio-box" href="img/portfolio/fullsize/ScaffCalc/1.jpg">
+            <img class="img-fluid" src="img/portfolio/thumbnails/ScaffCalc/1.jpg" alt="">
             <div class="portfolio-box-caption p-3">
               <div class="project-category text-white-75">
-                UX/UI
+                iOS Utveckling
               </div>
               <div class="project-name">
-                Ljuvalivet - 50++ Dejting App mockup
+                En app som beräknare antalet ställningsdelar som behövs för att bygga en enkel ställning.
               </div>
             </div>
           </a>
-          <a href="img/portfolio/fullsize/ljuvalivet/2.jpg"></a>
-          <a href="img/portfolio/fullsize/ljuvalivet/3.jpg"></a>
-          <a href="img/portfolio/fullsize/ljuvalivet/4.jpg"></a>
+          <a href="img/portfolio/fullsize/ScaffCalc//2.jpg"></a>
+          <a href="img/portfolio/fullsize/ScaffCalc/3.jpg"></a>
+          <a href="img/portfolio/fullsize/ScaffCalc/4.jpg"></a>
         </div>
       </div>
     </div>
