Edited Git link

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
   <section class="page-section bg-dark text-white">
     <div class="container text-center">
       <h2 class="mb-4">GitHub</h2>
-      <a class="btn btn-light btn-xl" target="_blank" href="https://github.com/alessiodiimperio?tab=repositories">Projects</a>
+      <a class="btn btn-light btn-xl" target="_blank" href="https://github.com/alessiodiimperio">Projects</a>
     </div>
   </section>
 
