--- a/index.html
+++ b/index.html
@@ -178,17 +178,22 @@
           <a href="img/portfolio/fullsize/tidsreg/5.jpg"></a>
         </div>
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/tictactoe/1.jpg">
-            <img class="img-fluid" src="img/portfolio/thumbnails/tictactoe/1.jpg" alt="">
+          <a class="portfolio-box" href="img/portfolio/fullsize/guardians/1.png">
+            <img class="img-fluid" src="img/portfolio/thumbnails/guardians/guardians.jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="project-category text-white-75">
-                OOP - Java
+                Android - Kotlin
               </div>
               <div class="project-name">
-                TicTacToe kommandotolk spel i Java
+                Guardians - Överfallslarm App för Android
               </div>
             </div>
           </a>
+          <a href="img/portfolio/fullsize/guardians/2.png"></a>
+          <a href="img/portfolio/fullsize/guardians/3.png"></a>
+          <a href="img/portfolio/fullsize/guardians/4.png"></a>
+          <a href="img/portfolio/fullsize/guardians/5.png"></a>
+          <a href="img/portfolio/fullsize/guardians/6.png"></a>
         </div>
         <div class="col-lg-4 col-sm-6">
           <a class="portfolio-box" target="_blank" href="img/portfolio/fullsize/catsandzombies/1.jpg">
