--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           <i class="fas fa-4x fa-heart text-white mb-4"></i>
           <h2 class="text-white mt-0">Helhjärtat eller inte alls.</h2>
           <hr class="divider light my-4">
-          <p class="text-white-75 mb-4">Min filosofi är att sträva efter att göra mitt bästa i allt jag gör. Göra det som driver mig framåt. Göra det som gör mig glad. Göra det som utmanar mig att bli ett bättre jag.</p>
+          <p class="text-white-75 mb-4">Min filosofi är att sträva efter att göra mitt bästa i allt jag gör. Göra det som driver mig framåt. Göra det som gör mig bättre. Göra det som utmanar mig att bli ett bättre jag.</p>
           <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Utveckling</a>
         </div>
       </div>
@@ -106,16 +106,16 @@
         </div>
         <div class="col-lg-3 col-md-6 text-center">
           <div class="mt-5">
-            <i class="fab fa-4x fa-java text-primary mb-4"></i>
-            <h3 class="h4 mb-2">Java</h3>
-            <p class="text-muted mb-0">OOP - Java</p>
+            <i class="fab fa-4x fa-react text-primary mb-4"></i>
+            <h3 class="h4 mb-2">React JS/Native</h3>
+            <p class="text-muted mb-0">Hybrid utveckling med React Native <br/> Webutveckling med ReactJS</p>
           </div>
         </div>
         <div class="col-lg-3 col-md-6 text-center">
           <div class="mt-5">
-            <i class="fab fa-4x fa-react text-primary mb-4"></i>
-            <h3 class="h4 mb-2">React Native</h3>
-            <p class="text-muted mb-0">Hybrid utveckling med React Native - JavaScript</p>
+            <i class="fab fa-4x fa-node-js text-primary mb-4"></i>
+            <h3 class="h4 mb-2">NodeJS</h3>
+            <p class="text-muted mb-0">Backend/API utveckling med NodeJS</p>
           </div>
         </div>
       </div>
@@ -169,13 +169,13 @@
                 iOS Utveckling
               </div>
               <div class="project-name">
-                En app som beräknare antalet ställningsdelar som behövs för att bygga en enkel ställning.
+                En app som beräknar antalet ställningsdelar som behövs för att bygga en enkel ställning.
               </div>
             </div>
           </a>
-          <a href="img/portfolio/fullsize/ScaffCalc//2.jpg"></a>
-          <a href="img/portfolio/fullsize/ScaffCalc/3.jpg"></a>
-          <a href="img/portfolio/fullsize/ScaffCalc/4.jpg"></a>
+            <a href="img/portfolio/fullsize/ScaffCalc//2.jpg"></a>
+            <a href="img/portfolio/fullsize/ScaffCalc/3.jpg"></a>
+            <a href="img/portfolio/fullsize/ScaffCalc/4.jpg"></a>
         </div>
         <div class="col-lg-4 col-sm-6">
           <a class="portfolio-box" href="img/portfolio/fullsize/modeflux/1.jpg">
@@ -253,15 +253,10 @@
       <div class="row">
         <div class="col-lg-4 ml-auto text-center mb-5 mb-lg-0">
           <i class="fab fa-linkedin fa-3x mb-3 text-muted"></i>
-          <a class="d-block" target="_blank" href="https://www.linkedin.com/in/alessio-diimperio/">Linkedin.com/me/</a></<a>
-        </div>
-        <div class="col-lg-4 ml-auto text-center mb-5 mb-lg-0">
-          <i class="fab fa-twitter fa-3x mb-3 text-muted"></i>
-          <a class="d-block" target="_blank" href="https://twitter.com/di_imperio">Di_imperio</a></<a>
+          <a class="d-block" target="_blank" href="https://www.linkedin.com/in/alessio-diimperio/">/alessio-diimperio/</a></<a>
         </div>
         <div class="col-lg-4 mr-auto text-center">
           <i class="fas fa-envelope fa-3x mb-3 text-muted"></i>
-          <!-- Make sure to change the email address in anchor text AND the link below! -->
           <a class="d-block" href="mailto:alessio.diimperio@gmail.com">alessio.diimperio@gmail.com</a>
         </div>
       </div>
